--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <title>Music Findr</title>
 
     <script src="https://apis.google.com/js/api.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+
   </head>
   <body>
     <div id="app"></div>
